fix item details padding/spacing

--- a/src/pages/details/details.scss
+++ b/src/pages/details/details.scss
@@ -1,6 +1,6 @@
 page-details {
 
     .col.detail { max-width: 33% !important; font-size: 0.8em; }
-    .copy-details { clear: both; margin-top: 15px; }
+    .list_cover_image { margin-bottom: 15px; }
 
 }
